Thu Feb  9 14:42:52 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/DCPSInfoRepo/DCPSSubscriberI.h:
        * tests/DCPS/DCPSInfoRepo/pubsub.cpp:
        
          Cleaning up "unused parameter" warnings.

Thu Feb  9 05:05:45 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/DCPSInfoRepo/pubsub.cpp:

          Initializing writer/reader Qos.

Wed Feb  8 23:30:38 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/DCPSInfoRepo/pubsub.cpp:

          Fixed timing issue.

Wed Feb  8 23:11:36 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/DCPSInfoRepo/pubsub.cpp:

          Changed test to do everything without unregistering.

Wed Feb  8 22:13:02 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/DCPSInfoRepo/DCPSSubscriberI.h:

          Missed adding new file for pubsub test.

Wed Feb  8 21:21:24 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/RTPS/RtpsDiscovery.cpp:
        * dds/DCPS/RTPS/RtpsInfo.h:
        * dds/DCPS/RTPS/RtpsInfo.cpp:

          Changed RtpsInfo::init_bit to have participantId and domainId passed
          in from RtpsDiscovery.

        * dds/DCPS/RTPS/Sedp.cpp:

          Changed data_received to not require pub/sub built in topics data reader
          and to not retrieve it till it is used.

        * tests/DCPS/DCPSInfoRepo/DCPSDataReaderI.h:
        * tests/DCPS/DCPSInfoRepo/DCPSDataReaderI.cpp:
        * tests/DCPS/DCPSInfoRepo/DCPSDataWriterI.h:
        * tests/DCPS/DCPSInfoRepo/DCPSDataWriterI.cpp:

          Added code to actually verify what is happening in readers and writers.

        * tests/DCPS/DCPSInfoRepo/dcpsinfo_test.mpc:
        * tests/DCPS/DCPSInfoRepo/pubsub.cpp:
        * tests/DCPS/DCPSInfoRepo/run_test.pl:

          Added single process to test pub and sub.

Wed Feb  8 16:45:07 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * java/tests/dcps_java_tests.lst: